--- a/Classes_03_Linear_Regression.ipynb
+++ b/Classes_03_Linear_Regression.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOWLrF+0vESIu8iSZZLicpX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "VEyKd5686Pt8"
       },
@@ -93,7 +92,7 @@
       "metadata": {
         "id": "F_ado_rVXzyc"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +117,7 @@
         "id": "LXEDjCG9YHB0",
         "outputId": "136bc83e-0ecc-4d08-a126-9884f42482c3"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,7 +178,7 @@
         "id": "FDoUEhi-m19o",
         "outputId": "6e89af89-9331-4859-f703-32b3feaa83b8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -259,7 +258,7 @@
         "id": "EyMEa6lNnvPH",
         "outputId": "7c6e3224-c183-447a-a8de-80566ad010fd"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -688,7 +687,7 @@
         "id": "ICf9SOIGnxZx",
         "outputId": "5950f077-4bf5-437a-c9db-400c7c2ad420"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +735,7 @@
         "id": "HI8HRfA2YWAg",
         "outputId": "ce8d352e-2d44-4deb-d978-1f180da48250"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1078,7 +1077,7 @@
         "id": "SAN5WXrA4-wj",
         "outputId": "d5134d01-3794-406d-832f-1fcd8686dcc8"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1118,7 +1117,7 @@
         "id": "LhoriRco5FSs",
         "outputId": "f0a31b44-815c-43ae-b6aa-4661cc276e40"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1522,7 +1521,7 @@
         },
         "outputId": "a531a227-366a-44b2-cbb4-08e9b0b1b5dd"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1553,7 +1552,7 @@
         "id": "Gy-Tdw9foP8_",
         "outputId": "cb869f68-a7ab-4b14-f4c6-7d31a3733401"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1583,7 +1582,7 @@
         "outputId": "a13da668-a50b-4fe3-8be9-0a6d9ba531e7",
         "id": "ogpQnqb45fOQ"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1640,7 +1639,7 @@
         "id": "ymDkKgaK5srX",
         "outputId": "12669b72-37bd-4aa4-ba50-3d3c68ebb5cb"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1985,7 +1984,7 @@
       "metadata": {
         "id": "_nAPmJhe7pRK"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2011,7 +2010,7 @@
         "id": "9dy-cQto78Mq",
         "outputId": "28981025-a0b2-4b93-de74-56ba459f8839"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2054,12 +2053,12 @@
         "\n",
         "Modelling the data usually consists of following steps:\n",
         "\n",
-        "1. Preparing the data: usually you want to select specific columns from your dataframe to create so called feature vector - a set of independent variable(s) (X), and target vector - a set of dependent variable (y).\n",
+        "1. Preparing the data: usually you want to select specific columns from your dataframe to create so called feature vector - a set of independent variable(s) (X), and target vector - dependent variable (y).\n",
         "2. Creating the model object: for most of classic ML cases you will be using sci-kit learn library. To perform linear regression we will use the linear model: [`LinearRegression`](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html#sklearn.linear_model.LinearRegression).\n",
-        "3. Feeding the model object with our data (so called fitting). Sci-kit learn (and most of other Python libraries for ML) has specific API. Fitting data to the model is done using the [`fit()`](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html#sklearn.linear_model.LinearRegression.fit) method...\n",
-        "4. Predicting data on a basis of our model. ...and prediction is done using the [`predict()`](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html#sklearn.linear_model.LinearRegression.predict) method. These methods are called **on** model object, e.g., `lm.fit(X,y)`.\n",
+        "3. Feeding the model object with our data (so called fitting). Sci-kit learn (and most of other Python libraries for ML) has specific API. Fitting data to the model is done using the [`fit()`](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html#sklearn.linear_model.LinearRegression.fit) method.\n",
+        "4. Predicting data on a basis of our model. Prediction is done using the [`predict()`](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html#sklearn.linear_model.LinearRegression.predict) method. These methods are called **on** model object, e.g., `lm.fit(X,y)`.\n",
         "5. Visualizing data. In case of one-variable linear regression, try to plot your estimated and original data to see the relationship.\n",
-        "6. Testing goodness of the regression model. Usually, in regression case you want to estimate $R^2$ and MAE, or MSE.\n",
+        "6. Testing goodness of the regression model. Usually, in regression case you want to calculate $R^2$ and MAE, or MSE metrics.\n",
         "\n",
         "**Converting these steps to the code:**\n",
         "\n",
@@ -2093,7 +2092,7 @@
       "source": [
         "## Exercise 1:\n",
         "\n",
-        "You want to see how is the relationship between BMI (one feature from df dataframe) and diabetes progress (target). Is diabetes progress increase lineary when BMI increase? Or there is no relationship? Or maybe the relationship will not be linear and the linear model is a bad choice? Using the code below try to answere these questions. **That's what analyzing data is**."
+        "You want to see what is the relationship between BMI (one feature from df dataframe) and diabetes progress (target). Does diabetes progress increase linearly when BMI increases? Or there is no relationship? Or maybe the relationship will not be linear and the linear model is a bad choice? Using the code below try to answer these questions. **That's what analyzing data is about**."
       ],
       "metadata": {
         "id": "UnkbSJJuqSFD"
@@ -2137,7 +2136,7 @@
         "id": "pz3SKWE8qOtT",
         "outputId": "e97811fe-87a7-477b-f87e-83a73dca2c4c"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2153,9 +2152,9 @@
       "cell_type": "markdown",
       "source": [
         "## Exercise 2 (optional):\n",
-        "This exercise may sound a little boring - but as we want to learn data analysis - it's necessery to deeply understand some terms. Now, try to answere some questions:\n",
+        "This exercise may sound a little boring but as we want to learn data analysis it's necessery to deeply understand some terms. Now, try to answer some questions to increase your understanding of metrics and models:\n",
         "\n",
-        "1. What does it exactly mean that R^2 has value od 0.34?\n",
+        "1. What does it exactly mean that R^2 value is 0.34?\n",
         "2. Is $R^2$ the same as $r^2$ (correlation coefficient)? Estimate the correlation between diabetes and bmi and check it yourself."
       ],
       "metadata": {
@@ -2170,19 +2169,26 @@
       "metadata": {
         "id": "wwnQs5vmuzwS"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Is this **always** the case?\n",
-        "\n",
-        "3. Try to interpret MSE from exercise 1. What else do you need to make MSE meaningfull? Is there any better mean error metric that is scale-independent and can be interpreted standalone? [HINT](https://www.statisticshowto.com/mean-absolute-percentage-error-mape/)\n",
+        "Is this **always** the case?"
+      ],
+      "metadata": {
+        "id": "kOqONMCRjm-J"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Try to interpret MSE from exercise 1. What else do you need to make MSE meaningful? Is there any better mean error metric that is scale-independent and can be interpreted standalone? [HINT](https://www.statisticshowto.com/mean-absolute-percentage-error-mape/)\n",
         "\n",
         "4. What is the exact linear model of our `target ~ bmi`? Write it down in a form of: $y = a + bx$\n",
         "\n",
-        "5. If you've ever encountered the concept of confidence intervals (CI), you know that it is important and useful in estimating how reliable an effect is obtained. Try calculating the 95% CI for the b coefficient. Do not waste more than 5 minuts for it!"
+        "5. If you've ever encountered the concept of confidence intervals (CI), you know that it is important and useful in estimating how reliable an effect is obtained. Try calculating the 95% CI for the b coefficient. If this takes more than 5 minutes to achieve, you should skip this exercise."
       ],
       "metadata": {
         "id": "mORl-7yIW7cl"
@@ -2195,7 +2201,7 @@
         "\n",
         "In previous exercise you were using classical ML library (although we did not perform ML per se). If you are interested in *classical* statistical modelling of your data - good news - you don't have to do this in R. There are nice Python libraries that allow you to create such models in R-style syntax. One of most popular packages is [statsmodels](https://www.statsmodels.org/stable/index.html).\n",
         "\n",
-        "Try to model the same relation as in exercise 1, but using statsmodels. **Comapre results of sklearn and statsmodels.** Read coefficients and CI.\n",
+        "Try to model the same relation as in exercise 1, but using statsmodels. **Compare results of sklearn and statsmodels.** Read coefficients and CI.\n",
         "\n",
         "Which library was better to get CI? This exercise was to show you that there is no need to stick to one library. You should always choose what is most suited to your goal."
       ],
@@ -2216,7 +2222,7 @@
       "metadata": {
         "id": "gYsAKsqmaKDB"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2447,7 +2453,6 @@
         "\n",
         "- fitted a linear regression model on a whole dataset using scikit-learn library;\n",
         "- estimated the effect of independent variable on dependent variable;\n",
-        "fitted training dataset;\n",
         "- fitted a linear regression model on a training dataset and evaluated its performance on the testing data to check its **generalizability**;\n",
         "- introduced the scikit-learn API `.fit(X, y)` (to train a model), `.predict(X)` (to make predictions);\n",
         "- used `r2_score(predicted, y)`, `mean_absolute_error(predicted, y)` and `mean_absolute_error(predicted, y)` to evaluate model performance."
