Changes homework wording

--- a/Classes_03_Linear_Regression.ipynb
+++ b/Classes_03_Linear_Regression.ipynb
@@ -720,7 +720,7 @@
         "  4. fit linear model on training data;\n",
         "  5. save results to dataframe: level, intercept, and each of coefficients;\n",
         "3. Do 2.1, 2.2, 2.3, 2.4, 2.5 100-times to test (2).\n",
-        "5. Using `sns.relplot()` plot `level ~ value` relationship for each of coefficients **in separate column**.\n",
+        "5. Using `sns.relplot()` plot `value ~ level` relationship for each of coefficients **in separate column**.\n",
         "\n",
         "\n",
         "If you want, you can do the same for a linear model estimated on the whole sample (without train-test splitting) to see if there is a big difference between models tested on the test dataset and models tested on the whole sample. In this case, it is a good idea to add the binary variable `with_test_set` to the results data frame, and then add the hue to `sns.relplot()`.\n"
