--- a/Classes_09_feature_extraction_selection.ipynb
+++ b/Classes_09_feature_extraction_selection.ipynb
@@ -492,7 +492,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### 1. K Best: Select features according to the k highest scores.\n",
+        "#### 2.1.1 K Best: Select features according to the k highest scores.\n",
         "\n",
         "Take a look into the following example:"
       ],
@@ -594,7 +594,7 @@
       "cell_type": "markdown",
       "source": [
         "---\n",
-        "#### 2. Percentile: Select features according to a ***percentile*** of the highest scores. See the documentation of [`SelectPercentile`](https://scikit-learn.org/stable/modules/generated/sklearn.feature_selection.SelectPercentile.html#sklearn.feature_selection.SelectPercentile)"
+        "#### 2.1.2 Percentile: Select features according to a ***percentile*** of the highest scores. See the documentation of [`SelectPercentile`](https://scikit-learn.org/stable/modules/generated/sklearn.feature_selection.SelectPercentile.html#sklearn.feature_selection.SelectPercentile)"
       ],
       "metadata": {
         "id": "RjioGnaEKV-o"
@@ -703,7 +703,7 @@
       "cell_type": "markdown",
       "source": [
         "---\n",
-        "#### 3. False Positive Rate test: Select features with *p*-values below alpha threshold based on FPR test."
+        "#### 2.1.3 False Positive Rate test: Select features with *p*-values below alpha threshold based on FPR test."
       ],
       "metadata": {
         "id": "vFHfKj4bKZLG"
@@ -1131,7 +1131,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Difference between Filter and Wrapper methods ⭐\n",
+        "### Summary: Difference between Filter and Wrapper methods ⭐\n",
         "\n",
         "The main differences between the filter and wrapper methods for feature selection are:\n",
         "\n",
@@ -1377,9 +1377,6 @@
         "       \"PCA_1\": pca_components[0],\n",
         "       \"PCA_2\": pca_components[1],\n",
         "       \"PCA_3\": pca_components[2],\n",
-        "      #  \"PCA_4\": pca_components[3],\n",
-        "      #  \"PCA_5\": pca_components[4],\n",
-        "      #  \"PCA_6\": pca_components[5],\n",
         "       \"features\": features,\n",
         "})\n",
         "\n",
@@ -1601,7 +1598,8 @@
         "    data=results_cv_df,\n",
         "    x=\"pipeline_name\",\n",
         "    y=\"cv_score\",\n",
-        "    hue=\"model_name\"\n",
+        "    hue=\"model_name\",\n",
+        "    dodge=False,\n",
         ")\n",
         "\n",
         "plt.legend(bbox_to_anchor=(1.02, 1), loc='upper left', borderaxespad=0)\n",
@@ -1637,103 +1635,6 @@
       "metadata": {
         "id": "BVF7VBPsQm0i"
       }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# TODO 🔥\n",
-        "\n",
-        "1. We're going to develop Perfectionism_project.ipynb further - EEG vs CMDA Perfectionism;\n",
-        "2. Operationalize the EEG signal in the **following three different ways**:\n",
-        "  - like before - one feature:\n",
-        "    - select one electrode;\n",
-        "    - select time window 0-100 ms;\n",
-        "    - average data in selected time window;\n",
-        "  - feature selection:\n",
-        "    - take a subset od electrodes: F1, Fz, F2, FC1, FCz, FC2, C1, Cz, C2, CP1, CPz, CP2;\n",
-        "    - select time window 0-100 ms;\n",
-        "    - (optionally average data in selected time window for each channels separately)\n",
-        "    - add feature selection step to your Pipeline with the method of your choice (filter or wrapper) with the hyperparameters of method (KBest, Percentile, N_features) trained in Grid Search.\n",
-        "  - feature extraction:\n",
-        "    - take a subset od electrodes: F1, Fz, F2, FC1, FCz, FC2, C1, Cz, C2, CP1, CPz, CP2;\n",
-        "    - select time window 0-100 ms;\n",
-        "    - add feature extraction step to your Pipeline with the number of components from 1 to 10 trained in Grid Search.\n",
-        "3. Test the same models as before: Linear Regression, KNN and SVR with Grid Seach for optimal hyperparameters. Remember to name your pipelines. You can use `evaluate_model_GS()` implemented below. The difference between this implementation and `evaluate_model_GS()` from notebook 05 is that this method requires `pipeline_name` parameter.\n",
-        "4. Visualize the results of different models and Pipelines."
-      ],
-      "metadata": {
-        "id": "XDQzXxiJFCgD"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def evaluate_GS_model(\n",
-        "    pipe,\n",
-        "    X_train,\n",
-        "    y_train,\n",
-        "    X_test,\n",
-        "    y_test,\n",
-        "    regressor_params,\n",
-        "    pipeline_name,\n",
-        "    cv=KFold(n_splits=3),\n",
-        "    predict_test = True,\n",
-        "    predict_train = True,\n",
-        "    ):\n",
-        "\n",
-        "    # define grid search\n",
-        "    grid_search_model = GridSearchCV(\n",
-        "        pipe,\n",
-        "        regressor_params,\n",
-        "        cv=cv,\n",
-        "        scoring={\"r2\", \"neg_mean_absolute_error\", \"neg_mean_squared_error\"},\n",
-        "        refit=\"r2\",\n",
-        "        return_train_score=True,\n",
-        "        verbose=3,\n",
-        "    )\n",
-        "\n",
-        "    # fit model\n",
-        "    grid_search_model.fit(X_train, y_train)\n",
-        "\n",
-        "    # predict test data\n",
-        "    y_test_pred = grid_search_model.predict(X_test) if predict_test is True else None\n",
-        "    test_score = r2_score(y_test, y_test_pred) if predict_test is True else None\n",
-        "\n",
-        "    # predict train data\n",
-        "    y_train_pred = grid_search_model.predict(X_train) if predict_train is True else None\n",
-        "    train_score = r2_score(y_train, y_train_pred) if predict_train is True else None\n",
-        "\n",
-        "    # extract mean cv scores\n",
-        "    mean_cv_score = grid_search_model.best_score_\n",
-        "\n",
-        "    # extract splits scores\n",
-        "    cv_results_df = pd.DataFrame(grid_search_model.cv_results_).iloc[[grid_search_model.best_index_]]\n",
-        "    cv_splits_scores_df = cv_results_df.filter(regex=r\"split\\d*_test_r2\").reset_index(drop=True)\n",
-        "\n",
-        "    # save results in dataframe\n",
-        "    this_result = pd.concat(\n",
-        "        [\n",
-        "            pd.DataFrame({\n",
-        "            \"model_name\": [pipe.steps[-1][0]],\n",
-        "            \"pipeline_name\": [pipeline_name],\n",
-        "            \"train score\": [train_score],\n",
-        "            \"mean_cv_score\": [mean_cv_score],\n",
-        "            \"test_score\": [test_score],\n",
-        "            \"best_model\": [grid_search_model.best_estimator_],\n",
-        "            \"parameters\": [grid_search_model.best_params_],\n",
-        "            }),\n",
-        "         cv_splits_scores_df\n",
-        "        ],\n",
-        "    axis=1\n",
-        "    )\n",
-        "\n",
-        "    return this_result"
-      ],
-      "metadata": {
-        "id": "HgzuEKk_efMG"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
