--- a/Classes_02_Linear_Regression.ipynb
+++ b/Classes_02_Linear_Regression.ipynb
@@ -299,26 +299,23 @@
         "# 1a. Select FCVC column and transform it to ndarray.\n",
         "# Make sure that it is 2D array of (n_samples, n_features) shape. - SEE DOCS\n",
         "\n",
-        "# X = your code\n",
-        "X = df[['FCVC']].to_numpy()\n",
+        "X = # your code\n",
         "\n",
         "# 1b. Select weight column and transform it to ndarray.\n",
-        "# y = your code\n",
-        "y = df['Weight'].to_numpy().ravel()\n",
+        "y = # your code\n",
         "\n",
         "# 2. Create an object LinearModel() and store it in lin_regressor variable\n",
         "lin_regressor = linear_model.LinearRegression()\n",
         "\n",
         "# 3. Fit LinearModel() object with our data\n",
         "# your code\n",
-        "lin_regressor.fit(X,y)\n",
         "\n",
         "# 4. Predict y data based on fitted model and X data\n",
-        "# y_predicted = # your code\n",
-        "y_predicted = lin_regressor.predict(X)\n",
+        "y_predicted = # your code\n",
+        "\n",
         "# 5. Visualize original data and predicted data\n",
         "sns.scatterplot(data = df, x='FCVC', y='Weight') # original\n",
-        "# sns.lineplot(x = X.flatten(), y = y_predicted.flatten()) # predicted\n",
+        "sns.lineplot(x = X.flatten(), y = y_predicted.flatten()) # predicted\n",
         "\n",
         "# 6. Calculate the coefficient of determination: 1 is perfect prediction\n",
         "print(f\"Coefficient of determination: {r2_score(y, y_predicted)}\")\n",
