--- a/Classes_03_KNN.ipynb
+++ b/Classes_03_KNN.ipynb
@@ -58,8 +58,9 @@
         "from sklearn import datasets, linear_model\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn import set_config\n",
+        "from sklearn.inspection import DecisionBoundaryDisplay\n",
         "from sklearn.neighbors import KNeighborsRegressor, KNeighborsClassifier\n",
-        "from sklearn.metrics import median_absolute_error, r2_score, classification_report, PredictionErrorDisplay, median_absolute_error, mean_squared_error, mean_absolute_error, accuracy_score\n",
+        "from sklearn.metrics import median_absolute_error, r2_score, classification_report, PredictionErrorDisplay, median_absolute_error, mean_squared_error, mean_absolute_error, accuracy_score, confusion_matrix\n",
         "from ucimlrepo import fetch_ucirepo\n",
         "\n",
         "plt.rcParams[\"figure.figsize\"] = (10,7)"
@@ -437,25 +438,66 @@
       "source": [
         "X = obesity_data_df[[\n",
         "    'Age',\n",
-        "    'FCVC',\n",
+        "    # 'FCVC',\n",
         "    'Height',\n",
         "]]\n",
         "\n",
         "y = # your code here\n",
-        "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=random_state)\n",
         "\n",
         "# create object of KNN Classifier\n",
         "knn = # your code here\n",
-        "\n",
         "knn.fit(X_train, y_train)\n",
         "y_pred = knn.predict(X_test)\n",
         "\n",
         "scores = compute_score_classification(y_test, y_pred)\n",
-        "# print scores"
+        "# print scores - your code here"
       ],
       "metadata": {
         "id": "Srjm01AFRkQe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### (Exercise 3.1)\n",
+        "\n",
+        "If you create a 2D feature matrix, you can use `scikit-learn` utilities to plot the decision boundaries. Let's build a model with only two features, then use the code below."
+      ],
+      "metadata": {
+        "id": "cH7-umfgLQyI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# your code here"
+      ],
+      "metadata": {
+        "id": "nFloDBxcLmPR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(10, 6))\n",
+        "\n",
+        "disp = DecisionBoundaryDisplay.from_estimator(\n",
+        "    knn,\n",
+        "    X_train,\n",
+        "    response_method=\"predict\",\n",
+        "    cmap=\"Pastel1\",\n",
+        "    alpha=0.5,\n",
+        "    xlabel=X_train.columns[0],\n",
+        "    ylabel=X_train.columns[1],\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "2FUTIgZIJnFV"
       },
       "execution_count": null,
       "outputs": []
