--- a/Classes_03_KNN.ipynb
+++ b/Classes_03_KNN.ipynb
@@ -438,7 +438,7 @@
       "source": [
         "X = obesity_data_df[[\n",
         "    'Age',\n",
-        "    # 'FCVC',\n",
+        "    'FCVC',\n",
         "    'Height',\n",
         "]]\n",
         "\n",
